<resources>
    <string name="app_name">RetrofitCourse</string>
    <string name="action_settings">Settings</string>
    <string name="employee_name_label">Employee Name:</string>
    <string name="not_aplicable">NA</string>
    <string name="employee_age_label">Age:</string>
    <string name="employee_salary_label">Salary:</string>
    <string name="employee_id_label">ID:</string>
    <string name="are_you_sure_label">Are you sure you want to delete this entry?</string>
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="communication_error">Could not communicate with the server</string>
</resources>
