<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/small_margin"
              android:elevation="4dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_id_label"/>

    <TextView
        android:id="@+id/employeeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_aplicable"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_name_label"/>

    <TextView
        android:id="@+id/employeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_aplicable"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_age_label"/>

    <TextView
        android:id="@+id/employeeAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_aplicable"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_salary_label"/>

    <TextView
        android:id="@+id/employeeSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_aplicable"/>

</LinearLayout>